# solana-realtime-indexer

./: .env.example  .gitignore  BUG_FIX_network_stress_lock_serialization.md  Cargo.toml  README.md  build.rs  docker-compose.yml
.github/workflows/: bench.yml  ci.yml
benches/: batch_writer.rs  rpc_pool.rs
benches/results/: README.md
deploy/: docker-compose.yml  solana-realtime-indexer.service
migrations/: 001_initial_schema.sql  002_indexes.sql  003_json_payload_and_wallet_clustering.sql  003_payload_jsonb.sql  004_slot_health_aggregate.sql  005_normalize_program_ids.sql  006_fix_log_messages_type.sql
proto/: geyser.proto
protocols/: README.md  orca.toml  raydium.toml
protos/solana/: geyser.proto
scripts/: chaos_test.sh  manual_gap_repair_test.sh  run-migrations.sh  test_lag_metric.sh
scripts/chaos/: README.md  test_crash_restart.sh  test_crash_restart_v2.sh  test_premature_checkpoint_bug.sh
src/: api.rs  config.rs  dashboard.rs  geyser.rs  lib.rs  main.rs  pass5.md  processor.rs  rpc_pool.rs
src/api/: middleware.rs  network_stress.rs  rest.rs  self_service.rs  websocket.rs
src/geyser/: block_time_cache.rs  client.rs  consumer.rs  decoder.rs  mod.rs  protocol.rs  reconnect.rs  wal_consumer.rs  wal_queue.rs
src/processor/: batch_writer.rs  cpi_decoder.rs  decoder.rs  pipeline.rs  schema.rs  sink.rs  sql.rs  store.rs
src/rpc_pool/: circuit_breaker.rs  health.rs  metrics.rs  pool.rs
tests/: test_premature_checkpoint_bug.rs  test_rpc_gap_repair.rs
tests/integration/: api_test.rs  pipeline_test.rs
tests/load/: rpc_pool_load.rs
(+1 files in other folders)
