[workspace]
members = [
    ".",
]

[package]
name = "solana-realtime-indexer"
version = "0.1.0"
edition = "2021"
publish = false
default-run="solana-realtime-indexer"

[lib]
name = "solana_realtime_indexer"
path = "src/lib.rs"

[dependencies]
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["postgres", "runtime-tokio-rustls", "chrono"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "full"] }
reqwest = { version = "0.12", features = ["json"] }
helius-laserstream = "0.1"
futures = "0.3"
chrono = "0.4"
bs58 = "0.5"
log = "0.4"
env_logger = "0.11"
dotenvy = "0.15"
fjall = "3.1.4"
prost = "0.14.3"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tempfile = "3.27.0"
